--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,12 @@ header h1 {
 	font-size: 20px;
 }
 
-.threeChar {
+.smalCell {
 	text-align: right;
     width: 46px;
 }
 
-.fourChar {
+.largeCell {
 	text-align: right;
     width: 58px;
 }
@@ -88,36 +88,36 @@ table {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-	.threeChar {
+	.smalCell {
 		text-align: right;
 		width: 46px;
 	}
 	
-	.fourChar {
+	.largeCell {
 		text-align: right;
 		width: 58px;
 	}
 }
 
 @media (min-width: 480px) and (max-width: 767.99px) {
-	.threeChar {
+	.smalCell {
 		text-align: right;
 		width: 34px;
 	}
 	
-	.fourChar {
+	.largeCell {
 		text-align: right;
 		width: 43px;
 	}
 }
 
 @media (max-width: 479.99px) {
-	.threeChar {
+	.smalCell {
 		text-align: right;
 		width: 25px;
 	}
 	
-	.fourChar {
+	.largeCell {
 		text-align: right;
 		width: 30px;
 	}
