--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,17 @@ header h1 {
 .smalCell {
 	text-align: right;
     width: 46px;
+	border: 1px solid #1A374D;
+    border-radius: 2px;
+    box-shadow: 1px 1px 2px #666;
 }
 
 .largeCell {
 	text-align: right;
     width: 58px;
+	border: 1px solid #1A374D;
+    border-radius: 2px;
+    box-shadow: 1px 1px 2px #666;
 }
 
 .rowcolumn {
@@ -63,12 +69,18 @@ header h1 {
 
 table {
 	margin-bottom: 5px;
+	border-collapse:unset;
+}
+
+.table {
+	overflow-x: auto;
 }
 
 .bIn {
 	color: #fff;
 	background-color: #1A374D;
 	border-radius: 5px;
+	margin-bottom: 5px;
 }
 
 .bOut {
@@ -106,36 +118,18 @@ hr {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-	.smalCell {
-		width: 46px;
-	}
-	
-	.largeCell {
-		width: 58px;
-	}
+
 }
 
 @media (min-width: 480px) and (max-width: 767.99px) {
-	.smalCell {
-		width: 34px;
-	}
-	
-	.largeCell {
-		width: 43px;
-	}
+
 	header h1 {
 		font-size: 35px;
 	}
 }
 
 @media (min-width: 290px) and (max-width: 479.99px) {
-	.smalCell {
-		width: 25px;
-	}
-	
-	.largeCell {
-		width: 30px;
-	}
+
 	header h1 {
 		font-size: 35px;
 	}
@@ -145,13 +139,7 @@ hr {
 }
 
 @media (max-width: 289.99px) {
-	.smalCell {
-		width: 25px;
-	}
-	
-	.largeCell {
-		width: 20px;
-	}
+
 	header h1 {
 		font-size: 35px;
 	}
