added footer and shadow to header

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,8 @@ body {
 header {
 	background-color: #B1D0E0;
 	border-radius: 0;
-	border: 0;
-	padding: 0;
-	margin-bottom: 50px;
+	margin-bottom: 30px;
+	box-shadow: 0 0 15px 0 #222;
 }
 
 header h1 {
@@ -117,12 +116,23 @@ hr {
 	font-size: 35px;
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+footer {
+	background-color: #6998AB;
+	border-radius: 0;
+	margin-top: 50px;
+	text-align: center;
+	padding: 10px;
+}
 
+footer span {
+	margin-right: 2px;
+}
+
+footer a:hover {
+	color: #1a374dc5;
 }
 
 @media (min-width: 480px) and (max-width: 767.99px) {
-
 	header h1 {
 		font-size: 35px;
 	}
